server/k8s/demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeed-deployment
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeed
  template:
    metadata:
      labels:
        app: jeed
    spec:
      volumes:
      - name: dind
        emptyDir: {}
      - name: jeed
        emptyDir: {}
      containers:
      - name: jeed
        image: cs125/jeed:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
        volumeMounts:
        - name: jeed
          mountPath: /tmp
      - name: dind
        image: docker:19.03-dind
        command: [ "/bin/sh" ]
        args: [ "-c", "rm -f /var/run/docker.pid && dockerd --host=tcp://0.0.0.0:2375" ]
        securityContext:
          privileged: true
        ports:
        - containerPort: 2375
        volumeMounts:
        - name: dind
          mountPath: /var/lib/docker
        - name: jeed
          mountPath: /tmp/
---
apiVersion: v1
kind: Service
metadata:
  name: jeed-service
  namespace: demo
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8888
  selector:
    app: jeed
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /demo/jeed/
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/session-cookie-path: "jeed"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
  name: jeed-ingress
spec:
  rules:
  - host: cs125-cloud.cs.illinois.edu
    http:
      paths:
      - path: /demo/jeed(/|$)(.*)
        backend:
          serviceName: jeed-service
          servicePort: 80
