server/k8s/minikube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeed-deployment
  namespace: jeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeed
  template:
    metadata:
      labels:
        app: jeed
    spec:
      containers:
      - name: jeed
        image: cs125/jeed
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jeed-service
  namespace: jeed
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: jeed
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: jeed
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /jeed/
  name: jeed-ingress
spec:
  rules:
  - http:
      paths:
      - path: /jeed(/|$)(.*)
        backend:
          serviceName: jeed-service
          servicePort: 80
