server/k8s/prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jeed-deployment
  namespace: jeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeed
  template:
    metadata:
      labels:
        app: jeed
    spec:
      containers:
      - name: jeed
        image: cs125/jeed:2020.4.2
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: jeed-service
  namespace: jeed
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8888
  selector:
    app: jeed
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: jeed
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /jeed/
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/session-cookie-path: "jeed"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "3600"
    nginx.ingress.kubernetes.io/session-cookie-expires: "3600"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
  name: jeed-ingress
spec:
  rules:
  - host: cs125-cloud.cs.illinois.edu
    http:
      paths:
      - path: /jeed(/|$)(.*)
        backend:
          serviceName: jeed-service
          servicePort: 80
